--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="vieport" content="width=device-width, initial-scale=1">
     <title>Tic-Tac-Toe | Tej Prakash Carpenter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://tej-carpenter.github.io/style.css">
 </head>
 
 <body>
@@ -38,6 +38,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="https://tej-carpenter.github.io/script.js"></script>
 </body>
 </html>
