--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="vieport" content="width=device-width, initial-scale=1">
     <title>Tic-Tac-Toe | Tej Prakash Carpenter</title>
-    <link rel="stylesheet" href="https://tej-carpenter.github.io/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li>Tic Tac Toe</li>
+            <li>Tej Prakash Carpenter</li>
         </ul>
     </nav>
 
@@ -28,7 +28,7 @@
             <div class="box bb0 rb0"><span class="BoxText"></span></div>
         </div>
         <div class="GameInfo">
-            <h1>Tej Prakash Carpenter</h1>
+            <h1>Tic Tac Toe</h1>
             <div>
                 <span class="info">Turn for <span id="turn">X</span></span>
                 <button id="reset">Replay</button>
@@ -38,6 +38,6 @@
             </div>
         </div>
     </div>
-    <script src="https://tej-carpenter.github.io/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
