--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="vieport" content="width=device-width, initial-scale=1">
     <title>Tic-Tac-Toe | Tej Prakash Carpenter</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2080630083160902" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
