--- a/Text-Manipulator/index.html
+++ b/Text-Manipulator/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Text Manipulator</title>
-  <link rel="stylesheet" type="text/css" href="text-manipulator-style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body style="background-image: url(images/Text-Manipulator-Background-2.png);">
@@ -29,6 +29,6 @@
     <a href="https://in.pinterest.com/tejprakashcarpenter" target="_blank"><img id="footer-image" src="images/Pinterest-logo.png" alt="Pinterest"></a>
     <a href="https://www.twitter.com/tej_arpenter" target="_blank"><img id="footer-image" src="images/Twitter-logo.png" alt="Twitter"></a>
   </div>
-  <script src="text-manipulator-JS.js"></script>  
+  <script src="script.js"></script>  
 </body>
 </html>
