--- a/Text-Manipulator/index.html
+++ b/Text-Manipulator/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body style="background-image: url(images/Text-Manipulator-Background-2.png);">
+<body style="background-image: url(https://user-images.githubusercontent.com/108168391/190317338-13a9b073-2a70-4c00-83fb-780631d0fa51.png);">
   <h1>Text Manipulator</h1>
   <textarea name="Textarea" id="Textarea" cols="400" rows="10" placeholder="Enter Your Text To Manipulate"></textarea>
   <br>
@@ -23,11 +23,11 @@
     <hr>
     A website by TEJ PRAKASH CARPENTER
     <br>
-    <a href="https://www.instagram.com/ashu_vishwa_karma" target="_blank"><img id="footer-image" src="images/instagram-logo.png" alt="Instagram"></a>
-    <a href="https://www.facebook.com/tejprakash.carpenter.9" target="_blank"><img id="footer-image" src="images/facebook-logo.png" alt="Facebook"></a>
-    <a href="https://www.github.com/tej-carpenter" target="_blank"><img id="footer-image" src="images/Git-hub-logo.png" alt="Git-Hub"></a>
-    <a href="https://in.pinterest.com/tejprakashcarpenter" target="_blank"><img id="footer-image" src="images/Pinterest-logo.png" alt="Pinterest"></a>
-    <a href="https://www.twitter.com/tej_arpenter" target="_blank"><img id="footer-image" src="images/Twitter-logo.png" alt="Twitter"></a>
+    <a href="https://www.instagram.com/ashu_vishwa_karma" target="_blank"><img id="footer-image" src="https://user-images.githubusercontent.com/108168391/190317437-13d5aea7-e3e2-40a4-9f19-5eecc9271f29.png" alt="Instagram"></a>
+    <a href="https://www.facebook.com/tejprakash.carpenter.9" target="_blank"><img id="footer-image" src="https://user-images.githubusercontent.com/108168391/190318324-af520540-dbd9-4a8a-851b-700a14549aa4.png" alt="Facebook"></a>
+    <a href="https://www.github.com/tej-carpenter" target="_blank"><img id="footer-image" src="https://user-images.githubusercontent.com/108168391/190317419-6b9951cd-b14f-40fe-8fee-18b50275a0b6.png" alt="Git-Hub"></a>
+    <a href="https://in.pinterest.com/tejprakashcarpenter" target="_blank"><img id="footer-image" src="https://user-images.githubusercontent.com/108168391/190317482-37886891-8ba5-48e9-831f-287240793dcf.png" alt="Pinterest"></a>
+    <a href="https://www.twitter.com/tej_arpenter" target="_blank"><img id="footer-image" src="https://user-images.githubusercontent.com/108168391/190317452-c2789db3-2069-4027-a15b-e88e0d649431.png" alt="Twitter"></a>
   </div>
   <script src="script.js"></script>  
 </body>
