--- a/Text-Manipulator/index.html
+++ b/Text-Manipulator/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Text Manipulator</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2080630083160902" crossorigin="anonymous"></script>
 </head>
 
 <body style="background-image: url(https://user-images.githubusercontent.com/108168391/190317338-13a9b073-2a70-4c00-83fb-780631d0fa51.png);">
