--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>Tej Prakash Carpenter</nav>
     <div class="page-container">
         <a href="tic-tac-toe">
-            <div class="container tic-tac-toe">
+            <div class="container Tic-Tac-Toe">
                 <div class="content"></div>
                 <div class="description">
                     <span class="title">Tic Tac Toe</span>
