--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <nav>Tej Prakash Carpenter</nav>
     <div class="page-container">
-        <a href="tic-tac-toe">
-            <div class="container Tic-Tac-Toe">
+        <a href="Tic-Tac-Toe">
+            <div class="container tic-tac-toe">
                 <div class="content"></div>
                 <div class="description">
                     <span class="title">Tic Tac Toe</span>
