--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="vieport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>Home | Tej Prakash Carpenter</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2080630083160902" crossorigin="anonymous"></script>
+    <title>Home | Tej Prakash Carpenter</title>
 </head>
 
 <body>
@@ -14,7 +14,9 @@
     <div class="page-container">
         <a href="Tic-Tac-Toe">
             <div class="container tic-tac-toe">
-                <div class="content"></div>
+                <div class="content">
+                    <iframe src="index.html" frameborder="0"></iframe>
+                </div>
                 <div class="description">
                     <span class="title">Tic Tac Toe</span>
                     <br>Play Tic Tac Toe annd enjoy.
@@ -23,7 +25,9 @@
         </a>
         <a href="Text-Manipulator">
             <div class="container text-manipulator">
-                <div class="content"></div>
+                <div class="content">
+                    <iframe src="index.html" frameborder="0"></iframe>
+                </div>
                 <div class="description">
                     <span class="title">Text Manipulator</span>
                     <br>Manipulate Text, Remove spaces, line breakes and more.
