--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="Tic-Tac-Toe">
             <div class="container tic-tac-toe">
                 <div class="content">
-                    <iframe src="index.html" frameborder="0"></iframe>
+                    <iframe src="Tic-Tac-Toe" frameborder="0"></iframe>
                 </div>
                 <div class="description">
                     <span class="title">Tic Tac Toe</span>
@@ -26,7 +26,7 @@
         <a href="Text-Manipulator">
             <div class="container text-manipulator">
                 <div class="content">
-                    <iframe src="index.html" frameborder="0"></iframe>
+                    <iframe src="Text-Manipulator" frameborder="0"></iframe>
                 </div>
                 <div class="description">
                     <span class="title">Text Manipulator</span>
