--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="vieport" content="width=device-width, initial-scale=1">
     <!-- <meta http-equiv="refresh" content="3; URL=https://google.com" /> -->
-    <title>Animations | Tej Prakash Carpenter</title>
+    <title>Home | Tej Prakash Carpenter</title>
     <style>
         * {
             margin: 0;
@@ -33,11 +33,8 @@
             list-style-type: none;
         }
 
-        nav>ul>li>span#homeText,
         img.navImage#home {
             padding-left: 15px;
-            float: left;
-            overflow: hidden;
         }
 
         nav>ul>li>input {
@@ -120,7 +117,6 @@
             <li><img src="Profile-Picture.png" class="navImage" alt="Profile" id="profile"></li>
             <li><img src="Search-bold.png" class="navImage" alt="Search" id="search"><input type="text" name="search"
                     id="searchbar"></li>
-            <li><a href="index.html"><span id="homeText">Tej Prakash</span></a></li>
         </ul>
     </nav>
 
