--- a/index.html
+++ b/index.html
@@ -68,20 +68,12 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Courier, monospace;
             text-align: center;
             text-decoration: none;
-            /* position: absolute; */
         }
-        .first {
-            background-color: rgb(255, 94, 0);
-        }
-        .second {
-            background-color: rgb(55, 0, 255);
-        }
-        .first:hover {
-            background-color: rgb(255, 94, 50);
-        }
-        .second:hover {
-            background-color: rgb(55, 0, 155);
-        }
+        .first { background-color: rgb(255, 94, 0); }
+        .second { background-color: rgb(55, 0, 255); }
+        .first:hover { background-color: rgb(255, 94, 50); }
+        .second:hover { background-color: rgb(55, 0, 155); }
+
         .selectionAnimation:hover,
         .selectionAnimation:active,
         .selectionAnimation:visited {
@@ -98,8 +90,6 @@
             <li><a href="index.html"><img src="Home-Bold.png" class="navImage" alt="Home" id="home"></a></li>
             <li><img src="Menu-Light.png" class="navImage" alt="Menu" id="menu"></li>
             <li><img src="Profile-Picture.png" class="navImage" alt="Profile" id="profile"></li>
-            <li><img src="Search-bold.png" class="navImage" alt="Search" id="search"><input type="text" name="search"
-                    id="searchbar"></li>
         </ul>
     </nav>
     <div class="animations">
