--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="vieport" content="width=device-width, initial-scale=1">
-    <!-- <meta http-equiv="refresh" content="3; URL=https://google.com" /> -->
+    <!-- <meta http-equiv="refresh" content="3; URL=https://github.com" /> -->
     <title>Home | Tej Prakash Carpenter</title>
     <style>
         * {
-            margin: 0;
+            margin: 5vw;
             padding: 0;
-        }
-        body {
-            background-color: rgb(36, 33, 33);
         }
         a {
             color: black;
@@ -24,12 +21,8 @@
             font-size: 45px;
             padding: 5px 10px;
         }
-        nav>ul {
-            list-style-type: none;
-        }
-        img.navImage#home {
-            padding-left: 15px;
-        }
+        nav>ul { list-style-type: none; }
+        img.navImage#home { padding-left: 15px; }
         nav>ul>li>input {
             background-color: whitesmoke;
             margin-right: 8px;
@@ -42,10 +35,7 @@
             transition: 0.5s;
             padding: 0 25px;
         }
-        nav>ul>li>input:hover,
-        nav>ul>li>input:active {
-            border-color: black;
-        }
+        nav>ul>li>input:hover, nav>ul>li>input:active { border-color: black; }
         img.navImage {
             padding-right: 25px;
             height: 50px;
@@ -74,13 +64,10 @@
         .first:hover { background-color: rgb(255, 94, 50); }
         .second:hover { background-color: rgb(55, 0, 155); }
 
-        .selectionAnimation:hover,
-        .selectionAnimation:active,
-        .selectionAnimation:visited {
+        .selectionAnimation:hover, .selectionAnimation:active, .selectionAnimation:visited {
             width: 350px;
             color: white;
             cursor: pointer;
-
         }
     </style>
 </head>
@@ -89,7 +76,7 @@
         <ul>
             <li><a href="index.html"><img src="Home-Bold.png" class="navImage" alt="Home" id="home"></a></li>
             <li><img src="Menu-Light.png" class="navImage" alt="Menu" id="menu"></li>
-            <li><img src="Profile-Picture.png" class="navImage" alt="Profile" id="profile"></li>
+            <li><img src="search-bold.png" class="navImage" alt="search" id="search"></li>
         </ul>
     </nav>
     <div class="animations">
