--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
     <title>Home | Tej Prakash Carpenter</title>
     <style>
         * {
-            margin: 5vw;
+            margin: 0;
             padding: 0;
         }
         a {
             color: black;
             text-decoration: none;
         }
-        img.navImage {
-            padding-right: 25px;
-            height: 50px;
-            float: right;
-            border: none;
-        }
         .animations {
+            Margin: none;
+            Margin-top: 2vw solid black;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -42,7 +38,6 @@
         .second { background-color: rgb(55, 0, 255); }
         .first:hover { background-color: rgb(255, 94, 50); }
         .second:hover { background-color: rgb(55, 0, 155); }
-
         .selectionAnimation:hover, .selectionAnimation:active, .selectionAnimation:visited {
             width: 350px;
             color: white;
