--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             text-decoration: none;
         }
         .animations {
-            Margin: none;
-            Margin-top: 2vw solid black;
+            Margin-top: 20px solid black;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
