--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <a href="http://tej-carpenter.github.io/ToDo-List" target="_blank">
             <div class="selectionAnimation first">To Do<br>List</div>
         </a>
-        <a href="http://tej-carpenter.github.io/Sudoku" target="_blank">
+        <!--<a href="http://tej-carpenter.github.io/Sudoku" target="_blank">
             <div class="selectionAnimation second">Sudoku</div>
-        </a>
+        </a>-->
     </div>
 </body>
 </html>
