--- a/index.html
+++ b/index.html
@@ -4,60 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="vieport" content="width=device-width, initial-scale=1">
-    <!-- <meta http-equiv="refresh" content="3; URL=https://github.com" /> -->
+    <!-- <meta http-equiv="refresh" content="3; URL=https://google.com" /> -->
     <title>Home | Tej Prakash Carpenter</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        a {
-            color: black;
-            text-decoration: none;
-        }
-        .animations {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            position: relative;
-        }
-        .selectionAnimation {
-            Margin-top: 20px solid black;
-            transition: 0.5s;
-            display: block;
-            height: 350px;
-            width: 300px;
-            color: black;
-            font-size: 50px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Courier, monospace;
-            text-align: center;
-            text-decoration: none;
-        }
-        .first { background-color: rgb(255, 94, 0); }
-        .second { background-color: rgb(55, 0, 255); }
-        .first:hover { background-color: rgb(255, 94, 50); }
-        .second:hover { background-color: rgb(55, 0, 155); }
-        .selectionAnimation:hover, .selectionAnimation:active, .selectionAnimation:visited {
-            width: 350px;
-            color: white;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="animations">
+    <nav>
+        <ul>
+            <li><a href="index.html"><img src="https://user-images.githubusercontent.com/108168391/191171853-a4412d9d-2c94-48cc-b45b-759172aceef1.png" class="navImage" alt="Home" id="home"></a></li>
+            <li><img src="https://user-images.githubusercontent.com/108168391/191172041-680e964b-acf3-4a29-acd7-e5d75f709be7.png" class="navImage" alt="Menu" id="menu"></li>
+            <li><img src="https://user-images.githubusercontent.com/108168391/191172127-a28d1346-b9fc-4ae6-a82c-7047ede8b7cb.png" class="navImage" alt="Profile" id="profile"></li>
+            <li><img src="https://user-images.githubusercontent.com/108168391/191172194-ca313495-9a6e-42a5-a72a-3d5858a0e1ca.png" class="navImage" alt="Search" id="search"><input type="text" name="search" id="searchbar"></li>
+            <li><a href="index.html"><span id="homeText">Tej Prakash</span></a></li>
+        </ul>
+    </nav>
+    <div class="container">
         <a href="http://tej-carpenter.github.io/Tic-Tac-Toe" target="_blank">
-            <div class="selectionAnimation first">Tic Tac Toe</div>
+            <div class="pageBox first">Tic<br>Tac<br>Toe</div>
         </a>
         <a href="http://tej-carpenter.github.io/Text-Manipulator" target="_blank">
-            <div class="selectionAnimation second">Text<br>Manipulator</div>
+            <div class="pageBox second">Text<br>Manipulator</div>
         </a>
         <a href="http://tej-carpenter.github.io/ToDo-List" target="_blank">
-            <div class="selectionAnimation first">To Do<br>List</div>
+            <div class="pageBox first">To Do<br>List</div>
         </a>
-        <!--<a href="http://tej-carpenter.github.io/Sudoku" target="_blank">
-            <div class="selectionAnimation second">Sudoku</div>
-        </a>-->
+        <a href="http://tej-carpenter.github.io/Sudoku" target="_blank">
+            <div class="pageBox second">Sudoku</div>
+        </a>
     </div>
 </body>
 </html>
