--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="container">
         <a href="http://tej-carpenter.github.io/Tic-Tac-Toe" target="_blank">
-            <div class="pageBox first">Tic<br>Tac<br>Toe</div>
+            <div class="pageBox first">Tic Tac Toe</div>
         </a>
         <a href="http://tej-carpenter.github.io/Text-Manipulator" target="_blank">
             <div class="pageBox second">Text<br>Manipulator</div>
