--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <meta http-equiv="refresh" content="3; URL=https://google.com" /> -->
     <title>Home | Tej Prakash Carpenter</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2080630083160902" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
