--- a/index.html
+++ b/index.html
@@ -1,37 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="vieport" content="width=device-width, initial-scale=1">
-    <!-- <meta http-equiv="refresh" content="3; URL=https://google.com" /> -->
-    <title>Home | Tej Prakash Carpenter</title>
-    <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2080630083160902" crossorigin="anonymous"></script>
+<title>Tej Prakash Carpenter</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE-edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <meta http-equiv="refresh" content="3; URL=https://google.com" /> -->
+<link rel="stylesheet" type="text/css" href="https://tej-carpenter.github.io/style.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2080630083160902" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html"><img src="https://user-images.githubusercontent.com/108168391/191171853-a4412d9d-2c94-48cc-b45b-759172aceef1.png" class="navImage" alt="Home" id="home"></a></li>
-            <li><img src="https://user-images.githubusercontent.com/108168391/191172041-680e964b-acf3-4a29-acd7-e5d75f709be7.png" class="navImage" alt="Menu" id="menu"></li>
-            <li><img src="https://user-images.githubusercontent.com/108168391/191172127-a28d1346-b9fc-4ae6-a82c-7047ede8b7cb.png" class="navImage" alt="Profile" id="profile"></li>
-            <li><img src="https://user-images.githubusercontent.com/108168391/191172194-ca313495-9a6e-42a5-a72a-3d5858a0e1ca.png" class="navImage" alt="Search" id="search"><input type="text" name="search" id="searchbar"></li>
-            <li><a href="index.html"><span id="homeText">Tej Prakash</span></a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <a href="http://tej-carpenter.github.io/Tic-Tac-Toe" target="_blank">
-            <div class="pageBox first">Tic Tac Toe</div>
-        </a>
-        <a href="http://tej-carpenter.github.io/Text-Manipulator" target="_blank">
-            <div class="pageBox second">Text<br>Manipulator</div>
-        </a>
-        <a href="http://tej-carpenter.github.io/ToDo-List" target="_blank">
-            <div class="pageBox first">To Do<br>List</div>
-        </a>
-        <a href="http://tej-carpenter.github.io/Sudoku" target="_blank">
-            <div class="pageBox second">Sudoku</div>
-        </a>
-    </div>
+<div class="navbar">
+	<a href="#">Details</a>
+	<a href="#">Register</a>
+	<a href="#">Log in</a>
+	<a href="https://tej-carpenter.github.io/" id="left" class="left">Home</a>
+</div>
+<div class="row">
+	<div class="main">
+		<center><img src="https://user-images.githubusercontent.com/108168391/197340057-8baa5f30-8c1a-4c8d-812e-a8db45d098c2.jpg" alt="Image not available" id="normal-image"><h2>TEJ PRAKASH CARPENTER</h2></center>
+		<h2>Education</h2>
+		<p><ul>
+			<li>Middle School : JNV Shivpuri</li>
+			<li>Higher Secondary School : JNV Shivpuri</li>
+			<li>High School (PCM) : JNV Shivpuri</li>
+			<li>Graduation : Govt. Nirbhay Singh Patel New Science College, Indore</li>
+		</ul></p>
+		<h2>Programming Languages</h2>
+		<p><ul>
+			<li>Java (certified courses)</li>
+			<li>Python (certified courses)</li>
+			<li>C/C++</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>Javascript</li>
+			<li>and learning more...</li>
+		</ul></p>
+		<h2>Projects</h2>
+		<p><ul>
+			<li class="link-card"><a href="http://tej-carpenter.github.io/Tic-Tac-Toe" target="_blank">Tic Tac Toe</a></li>
+			<li class="link-card"><a href="http://tej-carpenter.github.io/Sudoku" target="_blank">Sudoku</a></li>
+			<li class="link-card"><a href="http://tej-carpenter.github.io/ToDo-List" target="_blank">Todo List</a></li>
+			<li class="link-card"><a href="http://tej-carpenter.github.io/Text-Manipulator" target="_blank">Text Manipulator</a></li>
+		</ul></p>
+	</div>
+	<div class="side">
+		<ul><span class="link-heading-text">Tutorials</span><hr>
+			<li><a href="https://tej-carpenter.github.io/tutorials/operating-system.html">Operating System</a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/tutorials/programming-languages/CPP.html">C++</a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/tutorials/Introduction-to-Programming.html">Introduction to Programming</a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/tutorials/Programming-Methodology.html">programming Methodology</a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/tutorials/web-designing.html">Web Designing </a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/tutorials/data-structure.html">Data Structure</a><br><br></li>
+			<li><a href="tutorials/programminglanguages/javascript.html">Javascript</a><br><br></li>
+		</ul>
+		<ul><span class="link-heading-text">Projects</span><hr>
+			<li><a href="https://tej-carpenter.github.io/projects/sudoku.html">Sudoku</a></li>
+			<li><a href="https://tej-carpenter.github.io/projects/todolist">Todo List</a></li>
+			<li><a href="https://tej-carpenter.github.io/projects/tictactoe">Tic Tac Toe</a></li>
+			<li><a href="https://tej-carpenter.github.io/projects/text-manipulator">Text Mainpulator</a></li>
+		</ul>
+	</div>
+</div>
+<div class="footer">
+	<div class="left-footer">
+		Instagram<br>
+		Facebook<br>
+		Twitter<br>
+		Github<br>
+	</div>
+	<div class="right-footer">
+		<a href="https://www.instagram.com/ashu_vishwa_karma" target="_blank">@ashu_vishwa_karma</a><br>
+		<a href="https://www.facebook.com/tejprakash.carpenter.9" target="_blank">@tej prakash carpenter</a><br>
+		<a href="https://www.twitter.com/tej_carpenter" target="_blank">@tej_carpenter</a><br>
+		<a href="https://www.github.com/tej-carpenter" target="_blank">@tej-carpenter</a>
+	</div>
+</div>
 </body>
 </html>
