--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 			<li><a href="tutorials/programminglanguages/javascript.html">Javascript</a><br><br></li>
 		</ul>
 		<ul><span class="link-heading-text">Projects</span><hr>
-			<li><a href="https://tej-carpenter.github.io/projects/sudoku.html">Sudoku</a></li>
-			<li><a href="https://tej-carpenter.github.io/projects/todolist">Todo List</a></li>
-			<li><a href="https://tej-carpenter.github.io/projects/tictactoe">Tic Tac Toe</a></li>
-			<li><a href="https://tej-carpenter.github.io/projects/text-manipulator">Text Mainpulator</a></li>
+			<li><a href="https://tej-carpenter.github.io/projects/sudoku.html">Sudoku</a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/projects/todolist">Todo List</a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/projects/tictactoe">Tic Tac Toe</a><br><br></li>
+			<li><a href="https://tej-carpenter.github.io/projects/text-manipulator">Text Mainpulator</a><br><br></li>
 		</ul>
 	</div>
 </div>
