--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 			<li>Middle School : JNV Shivpuri</li>
 			<li>Higher Secondary School : JNV Shivpuri</li>
 			<li>High School (PCM) : JNV Shivpuri</li>
-			<li>Graduation : Govt. Nirbhay Singh Patel New Science College, Indore</li>
+			<li>Under Graduation : Govt. Nirbhay Singh Patel New Science College, Indore</li>
+			<li>Post Graduation : National Institute of Technology, Tiruchirapalli (NIT Trichy)</li>
 		</ul></p>
 		<h2>Programming Languages</h2>
 		<p><ul>
@@ -38,10 +39,10 @@
 		</ul></p>
 		<h2>Projects</h2>
 		<p><ul>
-			<li class="link-card"><a href="http://tej-carpenter.github.io/Tic-Tac-Toe" target="_blank">Tic Tac Toe</a></li>
-			<li class="link-card"><a href="http://tej-carpenter.github.io/Sudoku" target="_blank">Sudoku</a></li>
-			<li class="link-card"><a href="http://tej-carpenter.github.io/ToDo-List" target="_blank">Todo List</a></li>
-			<li class="link-card"><a href="http://tej-carpenter.github.io/Text-Manipulator" target="_blank">Text Manipulator</a></li>
+			<li class="link-card"><!--<a href="http://tej-carpenter.github.io/Tic-Tac-Toe" target="_blank">Tic Tac Toe</a>--></li>
+			<li class="link-card"><!--<a href="http://tej-carpenter.github.io/Sudoku" target="_blank">Sudoku</a>--></li>
+			<li class="link-card"><!--<a href="http://tej-carpenter.github.io/ToDo-List" target="_blank">Todo List</a>--></li>
+			<li class="link-card"><!--<a href="http://tej-carpenter.github.io/Text-Manipulator" target="_blank">Text Manipulator</a>--></li>
 		</ul></p>
 	</div>
 	<div class="side">
@@ -70,7 +71,6 @@
 		Github<br>
 	</div>
 	<div class="right-footer">
-		<a href="https://www.instagram.com/ashu_vishwa_karma" target="_blank">@ashu_vishwa_karma</a><br>
 		<a href="https://www.facebook.com/tejprakash.carpenter.9" target="_blank">@tej prakash carpenter</a><br>
 		<a href="https://www.twitter.com/tej_carpenter" target="_blank">@tej_carpenter</a><br>
 		<a href="https://www.github.com/tej-carpenter" target="_blank">@tej-carpenter</a>
